# whisper_runpod_exp

./: Dockerfile  Dockerfile.runpod  Makefile  RUNPOD_DEPLOYMENT.md  pyproject.toml
.github/workflows/: docker-build-push.yml
build_code/src/: config.py  data_body.py  helpers.py  models.py  runpod_handler.py  serve.py  text_to_vector.py  util.py  voice_to_text.py
